# tg-to-org

./: .gitignore  Message.py  TODO  app.py  config.py  db.py  hello.py  main.py  package.json  pyproject.toml  test.ts
export/: TODO  __init__.py  __main__.py  config.ini  downloader.py  dumper.py  exporter.py  main.py  main_stuff.py  media.py  utils.py
export/formatters/: __init__.py  baseformatter.py  htmlformatter.py  nlpformatter.py  textformatter.py
export/tests/: test_utils.py
models/: message.py
static/: styles.css
templates/: authors.html  index.html  navbar.html  post.html
