[tool.poetry]
name = "tg-to-org"
version = "0.1.0"
description = ""
authors = ["harmitage <anthonyharmitage@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Pyrogram = "^2.0.30"
TgCrypto = "^1.2.3"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
black = "^22.6.0"
flake8 = "^4.0.1"
pylint = "^2.14.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

