[tool.poetry]
name = "tg-to-org"
version = "0.1.0"
description = ""
authors = ["Anthony Harmitage <anthony.harmitage@protonmail.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Pyrogram = "^2.0.106"
TgCrypto = "^1.2.5"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
async-generator = "^1.10"
tqdm = "*"
telethon = "^1.36.0"
setuptools = "*"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
